fix: add a dark shadow of blue for header hover state on mobile

--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -15,6 +15,7 @@
 		--secondary: 240 4.8% 95.9%;
 		--secondary-foreground: 240 5.9% 10%;
 		--primary-blue: 220 100% 54%;
+		--primary-blue-dark: 220 100% 45%;
 		--primary-blue-foreground: 0 0% 98%;
 		--secondary-gray: 231 10% 69%;
 		--secondary-gray-foreground: 0 0% 98%;
